removed unecessary code and fixed the issue with data not aligning

--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,6 @@
 @import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
 
- /*svg {
-	  	width: 400px;
-	  	height: 400px;
-	  }*/
-
-.axis text {
-  font: 10px sans-serif;
-}
-
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  /*shape-rendering: crispEdges;*/
-}
-
 body {
   background: #fcfcfa;
   font-family: "Segoe UI",WeblySleek UILight,Helvetica,Arial,sans-serif;
@@ -28,41 +12,10 @@ body {
   color: #E6E8F4;
 }
 
-/*.stroke {
-  fill: none;
-  stroke: #000;
-  stroke-width: 3px;
-}
-
-.fill {
-  fill: #fff;
-}
-
-.graticule {
-  fill: none;
-  stroke: #777;
-  stroke-width: .5px;
-  stroke-opacity: .5;
-}
-
-.land {
-  fill: #222;
-}
-
-.boundary {
-  fill: none;
-  stroke: #fff;
-  stroke-width: .5px;
-}*/
-
 #map {
   float: right;
   margin-bottom: 10px;
 }
-
-/*#projection {
-  display: inline-block;
-}*/
 
 .form-group select {
   width: 50%;
@@ -80,7 +33,6 @@ body {
   width: 30%;
   height: 1000px;
   margin: 1em;
-  /*padding-top: 30px;*/
 }
 
 .graphside {
@@ -91,10 +43,6 @@ body {
   margin-bottom: 20px;
   margin-right: 15px;
 }
-
-/*#world-map {
-  display: block;
-}*/
 
 .graph-title {
   float: right; 
@@ -113,17 +61,9 @@ body {
   float: left;
   max-width: 300px;
   margin-top: 15px;
-  /*margin: 0 0 50px 10px;*/
-  /*margin-right: 0px;
-  margin-left: 30px;
-  margin-bottom: 50px;*/
-  /*padding: 15px;*/
-  /*vertical-align: top;*/
 }
 
 #flight-info hr {
-  /*margin-top: 10px;*/
-  /*margin-bottom: 5px;*/
   margin: 0 0 0 0;
 }
 
@@ -133,8 +73,6 @@ body {
 }
 
 #flight-info h3{
-  /*margin-top: 5px;
-  margin-bottom: 0px;*/
   margin: 0 15px 0 15px;
 }
 
@@ -144,7 +82,6 @@ body {
 }
 
 #flight-info h4 {
-  /*margin-top: 5px;*/
   margin: 0 15px 10px 15px;
   font-size: 16px;
   font-weight: normal;
@@ -166,7 +103,6 @@ body {
   background-color: #323545;
   color:#E6E8F4;
   padding: 15px;
-  /*height: 30px;*/
   clear: left;
   margin-top: 50px;
 }
